# dependency-map

./: .gitignore  README.md  adapter.py  pyproject.toml  script.py
config/: biocypher_config.yaml  full_schema_config.yaml  schema_config.yaml
dmb/: adapter.py
