[tool.poetry]
name = "depmap-biocypher"
version = "0.1.0"
description = "DepMap BioCypher adapter"
authors = ["Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.6.0"
isort = "^5.10.1"
biocypher = {path = "../BioCypher/", develop = true}
snakeviz = "^2.1.1"

[tool.poetry.dev-dependencies]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
