[tool.poetry]
name = "dmb"
version = "0.1.0"
description = "DepMap BioCypher adapter"
authors = ["Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.10.1"
biocypher = { git = "https://github.com/saezlab/BioCypher.git", branch = "main", tag = "v0.4.3" }
# biocypher = {path = "../BioCypher", develop = true}  # for local development
snakeviz = "^2.1.1"
bioregistry = "^0.6.9"

[tool.poetry.dev-dependencies]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
